--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Click on the play button to play a sound:</p>
 
 <audio controls autoplay>
-<source src="bgsound.m4a" type="audio/mpeg">
+<source src="bgsound.mp3" type="audio/mpeg">
 </audio>
 <br><br>
 <br>
