--- a/hobby.html
+++ b/hobby.html
@@ -73,7 +73,7 @@
 <center>
 <br>
 <audio controls autoplay>
-<source src="growlsound.m4a">
+<source src="audio/growlsound.m4a">
 </audio>
 <br><br>
 </td></tr>
@@ -85,7 +85,7 @@
 <center>
 <br>
 <audio controls autoplay>
-<source src="overdose.m4a">
+<source src="audio/overdose.m4a">
 </audio>
 <br><br></td></tr>
 
@@ -96,7 +96,7 @@
 <center>
 <br>
 <audio controls autoplay>
-<source src="dancingking.m4a">
+<source src="audio/dancingking.m4a">
 </audio>
 <br><br>
 </td></tr>
@@ -108,7 +108,7 @@
 <center>
 <br>
 <audio controls autoplay>
-<source src="firstsnow.m4a">
+<source src="audio/firstsnow.m4a">
 </audio>
 <br><br></td></tr>
 
@@ -119,7 +119,7 @@
 <center>
 <br>
 <audio controls autoplay>
-<source src="tempo.m4a">
+<source src="audio/tempo.m4a">
 </audio>
 <br><br></td></tr>
 
